// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
}

.c3 {
  width: 100%;
  height: auto;
  display: block;
  object-fit: none;
}

.c0 {
  display: flex;
  position: relative;
  height: 100%;
  flex-direction: column;
}

.c1 {
  height: auto;
  flex-basis: calc(100% / 3);
}

.c1 img {
  border-radius: 1rem;
  overflow: hidden;
}

.c4 {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: calc(200% / 3);
}

@media (min-width: 740px) {
  .c0 {
    flex-direction: row;
  }
}

@media (min-width: 1440px) {
  .c0 {
    flex-direction: column;
  }
}

@media (min-width: 740px) {
  .c4 {
    justify-content: center;
  }
}

@media (min-width: 1440px) {
  .c4 {
    justify-content: normal;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    squaredCorners={false}
  >
    <div
      className="c2 lazyload"
      height="auto"
      image={null}
      images="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
      isBackgroundImage={false}
      nonObjFitImage=""
      objFitState={true}
      setObjFitState={[Function]}
      squaredCorners={false}
      width="100%"
    >
      <img
        alt=""
        className="c3 lazyload"
        data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
        data-sizes="auto"
        data-src={null}
        data-srcset="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
        height="auto"
        mediumBreakpointRowLayout={null}
        objFitState={true}
        objectFit="none"
        smallBreakpointRowLayout={null}
        src={null}
        srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        width="100%"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <h2>
      Title
    </h2>
    <p>
      Description
    </p>
  </div>
</div>
`;

exports[`renders correctly with no image 1`] = `
.c0 {
  display: flex;
  position: relative;
  height: 100%;
  flex-direction: column;
}

.c1 {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: calc(200% / 3);
}

@media (min-width: 740px) {
  .c0 {
    flex-direction: row;
  }
}

@media (min-width: 1440px) {
  .c0 {
    flex-direction: column;
  }
}

@media (min-width: 740px) {
  .c1 {
    justify-content: center;
  }
}

@media (min-width: 1440px) {
  .c1 {
    justify-content: normal;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Title
    </h2>
    <p>
      Description
    </p>
  </div>
</div>
`;
